app icon added and about page loading indicator done

--- a/mobile/package.json
+++ b/mobile/package.json
@@ -13,6 +13,7 @@
     "react-native-action-button": "^2.8.5",
     "react-native-elements": "^1.1.0",
     "react-native-linear-gradient": "^2.5.3",
+    "react-native-loading-spinner-overlay": "^1.0.1",
     "react-native-touchable-scale": "^2.0.0",
     "react-navigation": "^3.3.2",
     "uuid": "^3.3.2"
