--- a/mobile/app.json
+++ b/mobile/app.json
@@ -1,13 +1,14 @@
 {
   "expo": {
     "name": "Todos",
-    "slug": "mobile",
+    "slug": "todos",
     "privacy": "public",
     "sdkVersion": "32.0.0",
     "platforms": [
       "ios",
       "android"
     ],
+    "githubUrl": "https://github.com/mahmudahsan/todos-react-reactnative",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
